# mimir

./: Cargo.toml  README.md  build.rs
scripts/: build_android.ps1
src/: callbacks.rs  crypto.rs  error.rs  lib.rs  mimir.udl  tlv.rs  types.rs
src/files/: client.rs  crypto.rs  mod.rs
src/mediator/: client.rs  manager.rs  mod.rs  protocol.rs
src/peer/: connection.rs  data_stream.rs  mod.rs  protocol.rs  resolver.rs  ygg_selector.rs
