[package]
name = "mimir"
version = "0.1.0"
edition = "2024"
authors = ["Revertron"]
description = "Mimir messaging networking library (P2P + mediator)"
license = "LGPL-3.0"

[dependencies]
ygg_stream       = { path = "../ygg_stream" }
yggdrasil        = { path = "../../Yggdrasil-ng/crates/yggdrasil" }
tokio            = { version = "1", features = ["full"] }
uniffi           = { version = "0.31.0", features = ["build", "cli"] }
ed25519-dalek    = { version = "2", features = ["rand_core"] }
rand             = "0.8"
thiserror        = "2"
serde_json       = "1"
hex              = "0.4"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Group chat crypto
chacha20poly1305 = "0.10"
x25519-dalek     = { version = "2", features = ["static_secrets"] }
curve25519-dalek = "4"
hkdf             = "0.12"
sha2             = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }

[lib]
name = "mimir"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
test = false